--- a/SampleRag.Application/SampleRag.Application.csproj
+++ b/SampleRag.Application/SampleRag.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="14.0.0" />
+    <PackageReference Include="Quartz" Version="3.15.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SampleRag.Domain\SampleRag.Domain.csproj" />
+  </ItemGroup>
+	
 </Project>
